--- a/src/App.css
+++ b/src/App.css
@@ -30,11 +30,12 @@ body {
     display: flex;
     flex-direction: row;
        align-items: center;
-    margin: 0 2rem;
+    margin: 0 0 0 2rem;
 }
 .nav1{
-
+    font-family: Yantramanav,sans-serif;
     font-size: 25px;
+    font-size: 1.5rem;
 }
 
 .imageProduct {
@@ -45,6 +46,7 @@ body {
 .Accordion {
     position: fixed;
     cursor: pointer;
+    width: 20vw;
 }
 
 
@@ -98,11 +100,66 @@ div.col1 {
 
 .cardHome {
 
-    height: 200px;
+    height: 220px;
 }
 
 
 .ecomerce{
 
     font-size: 20px;
+}
+.l1{
+    height: 6rem;
+   width: 10vw;
+  border-color: grey;
+    border-style: solid;
+    text-align: center;
+}
+.me-auto{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+     
+}
+.sp1{
+
+    color: #c7c7c7;;
+}
+.cartButton{
+      border-radius: 50%;
+    background-color: #f85555;;
+    width: 4rem;
+    height: 4rem;
+   margin-left: 12rem;
+}
+
+.blockquote-footer{
+
+    width: 100vw;
+    height: 30vh;
+    background-color:rgb(63, 62, 62);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.footerP{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sourceTitle{
+ font-size: 1.2rem;
+    font-family: Yantramanav,sans-serif;
+    color: white;
+}
+
+.footer2{
+   
+    font-size: 2rem;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
 }
